fix: overlapping color-picker

--- a/src/components/TextBtn/style.module.css
+++ b/src/components/TextBtn/style.module.css
@@ -9,4 +9,5 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  position: relative;
 }
